<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/changeFontTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/change_Font_Color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/ChangeBackgroundColor"
        android:textSize="18sp"
        android:layout_alignTop="@+id/spinnerBack"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ColorBack"
        android:layout_below="@+id/spinnerFS"
        android:layout_alignStart="@+id/spinnerColor"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/Margin"
        android:textSize="18sp"
        android:layout_below="@+id/changeFontTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp" />

    <Spinner
        android:id="@+id/spinnerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Margin"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/spinnerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Margin"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toStartOf="@+id/buttonDefault" />

    <Spinner
        android:id="@+id/spinnerFS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/FontSize"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/spinnerBack" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/FontSize"
        android:textSize="18sp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/changeFontTextView"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ColorFont"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DefaultSettings"
        android:layout_marginBottom="59dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>